--- a/style.css
+++ b/style.css
@@ -87,11 +87,26 @@ img {
     width: 30px;
 }
 
+#insta {
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    -webkit-background-clip: text;
+    /* Also define standard property for compatibility */
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 30px;
+    /* change this to change the size*/
+}
+
 .link {
     display: flex;
     margin: 10px;
     padding: 10px;
     align-items: center;
+    justify-content: left;
+}
+
+.linka {
+    margin-top: -5px;
 }
 
 .link h2 {
