--- a/about/style.css
+++ b/about/style.css
@@ -9,21 +9,26 @@
     #asosiy {
         width: 100%;
         height: 100vh;
-        background-image: linear-gradient(rgb(0, 0, 0, 0.8), rgb(0, 0, 0, 0.9)), url(img.jpg);
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url(img.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
         animation: asosiy 5s linear infinite;
         cursor: context-menu;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     
-    @keyframes asosiy {
-        0% {
-            filter: hue-rotate(0deg);
-        }
-        100% {
-            filter: hue-rotate(360deg);
-        }
+    .matn {
+        margin-top: 100px;
+        margin-bottom: -180px;
+    }
+    
+    .sass {
+        backdrop-filter: blur(10px);
+        width: 500px;
+        height: 400px;
     }
     
     header {
@@ -185,5 +190,19 @@
             justify-content: center;
             align-items: center;
             margin: 10px;
+        }
+        #asosiy {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .matn {
+            margin-top: 50px;
+            margin-bottom: -180px;
+        }
+        .sass {
+            backdrop-filter: blur(10px);
+            width: 500px;
+            height: 450px;
         }
     }
