--- a/about/style.css
+++ b/about/style.css
@@ -1,208 +1,201 @@
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: sans-serif;
-        box-sizing: border-box;
-        /* scroll-behavior: smooth; */
-    }
-    
-    #asosiy {
-        width: 100%;
-        height: 100vh;
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url(img.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        animation: asosiy 5s linear infinite;
-        cursor: context-menu;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .matn {
-        margin-top: 100px;
-        margin-bottom: -180px;
-    }
-    
-    .sass {
-        backdrop-filter: blur(10px);
-        width: 500px;
-        height: 400px;
-    }
-    
-    header {
-        width: 100%;
-    }
-    
-    nav h1 {
-        color: #fa4659;
-        text-align: center;
-        font-weight: 700;
-        font-size: 30px;
-    }
-    
-    .asosiy {
-        margin-top: 200px;
-        font-size: 20px;
-        color: #fa4659;
-        text-align: center;
-    }
-    
-    .asosiy h1 {
-        font-size: 50px;
-        margin-bottom: 10px;
-    }
-    
-    .asosiy a {
-        width: 180px;
-        height: 45px;
-        padding: 5px 5px 5px 5px;
-        margin-right: 20px;
-        font-size: 25px;
-        border-radius: 20px;
-        border: 3px solid #fa4659;
-        background: transparent;
-        color: #fa4659;
-        text-decoration: none;
-    }
-    
-    .asosiy a:hover {
-        background: #fa4659;
-        color: #fff;
-        transition: 0.5s;
-    }
-    
-    .p {
-        text-transform: uppercase;
-        font-size: 35px;
-        background-color: grey;
-        padding: 10px 0;
-        text-align: center;
-        font-weight: 900;
-        color: white;
-    }
-    
-    .box4 div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-orient: horizontal;
-        box-direction: normal;
-        flex-flow: row wrap;
-        text-decoration: none;
-    }
-    
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
+
+.asosiy1 {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url(img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    cursor: context-menu;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.matn1 {
+    margin-top: 100px;
+    margin-bottom: -180px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 30px;
+    color: #fa4659;
+}
+
+.sass {
+    backdrop-filter: blur(10px);
+    width: 500px;
+    height: 400px;
+}
+
+header {
+    width: 100%;
+}
+
+.asosiy {
+    margin-top: 200px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.asosiy h1 {
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+
+.asosiy a {
+    width: 180px;
+    height: 45px;
+    padding: 5px 5px 5px 5px;
+    margin-right: 20px;
+    font-size: 25px;
+    border-radius: 20px;
+    border: 3px solid #fa4659;
+    background: transparent;
+    color: #fa4659;
+    text-decoration: none;
+}
+
+.asosiy a:hover {
+    background: #fa4659;
+    color: #fff;
+    transition: 0.5s;
+}
+
+.p {
+    text-transform: uppercase;
+    font-size: 35px;
+    background-color: grey;
+    padding: 10px 0;
+    text-align: center;
+    font-weight: 900;
+    color: white;
+}
+
+.box4 div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-orient: horizontal;
+    box-direction: normal;
+    flex-flow: row wrap;
+    text-decoration: none;
+}
+
+.box4 div div {
+    margin: 20px;
+    width: 400px;
+    box-orient: vertical;
+    box-direction: normal;
+    flex-direction: column;
+    padding: 10px 10px 50px 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 6px gray;
+    box-shadow: 0 0 6px gray;
+}
+
+.box4 div div img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.body .box4 div div h2 {
+    text-transform: uppercase;
+    margin: 0 10px 10px 10px;
+    padding: 40px 20px 20px 0;
+    text-decoration: none;
+}
+
+h2 {
+    margin: 25px 0 0 0;
+}
+
+.box4 div div p {
+    width: 70%;
+    margin: auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.pagination {
+    width: 100%;
+}
+
+.pagination {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.pagination>p {
+    margin: 40px;
+    background-color: transparent;
+    padding: 20px 25px;
+    border-radius: 50%;
+    border: 2px solid gray;
+}
+
+.pagination .active {
+    background-color: gray;
+    color: white;
+}
+
+.pagination p {
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
     .box4 div div {
         margin: 20px;
-        width: 400px;
+        width: 450px;
         box-orient: vertical;
-        box-direction: normal;
         flex-direction: column;
         padding: 10px 10px 50px 10px;
         border-radius: 10px;
         box-shadow: 0 0 6px gray;
         box-shadow: 0 0 6px gray;
     }
-    
-    .box4 div div img {
-        width: 100%;
-        height: auto;
+}
+
+@media (max-width:490px) {
+    .box4 div div {
+        margin: 20px;
+        width: 300px;
+        box-orient: vertical;
+        flex-direction: column;
+        padding: 10px 10px 50px 10px;
         border-radius: 10px;
+        box-shadow: 0 0 6px gray;
+        box-shadow: 0 0 6px gray;
     }
-    
-    .body .box4 div div h2 {
-        text-transform: uppercase;
-        margin: 0 10px 10px 10px;
-        padding: 40px 20px 20px 0;
-        text-decoration: none;
-    }
-    
-    h2 {
-        margin: 25px 0 0 0;
-    }
-    
-    .box4 div div p {
-        width: 70%;
-        margin: auto;
-    }
-    
-    a {
-        text-decoration: none;
-    }
-    
-    .pagination {
-        width: 100%;
-    }
-    
-    .pagination {
-        align-items: center;
+    .asosiy a {
+        width: 200px;
+        display: inline-block;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        margin: 10px;
+    }
+    .asosiy1 {
         display: flex;
+        justify-content: center;
+        align-items: center;
     }
-    
-    .pagination>p {
-        margin: 40px;
-        background-color: transparent;
-        padding: 20px 25px;
-        border-radius: 50%;
-        border: 2px solid gray;
-        /* transition: 5s; */
+    .matn {
+        margin-top: 50px;
+        margin-bottom: -180px;
     }
-    
-    .pagination .active {
-        background-color: gray;
-        color: white;
+    .sass {
+        backdrop-filter: blur(10px);
+        width: 500px;
+        height: 450px;
     }
-    
-    .pagination p {
-        cursor: pointer;
-    }
-    
-    @media (max-width: 768px) {
-        .box4 div div {
-            margin: 20px;
-            width: 450px;
-            box-orient: vertical;
-            flex-direction: column;
-            padding: 10px 10px 50px 10px;
-            border-radius: 10px;
-            box-shadow: 0 0 6px gray;
-            box-shadow: 0 0 6px gray;
-        }
-    }
-    
-    @media (max-width:490px) {
-        .box4 div div {
-            margin: 20px;
-            width: 300px;
-            box-orient: vertical;
-            flex-direction: column;
-            padding: 10px 10px 50px 10px;
-            border-radius: 10px;
-            box-shadow: 0 0 6px gray;
-            box-shadow: 0 0 6px gray;
-        }
-        .asosiy a {
-            width: 200px;
-            display: inline-block;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin: 10px;
-        }
-        #asosiy {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .matn {
-            margin-top: 50px;
-            margin-bottom: -180px;
-        }
-        .sass {
-            backdrop-filter: blur(10px);
-            width: 500px;
-            height: 450px;
-        }
-    }
+}
