--- a/about/style.css
+++ b/about/style.css
@@ -9,7 +9,6 @@
     width: 100%;
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url(img.jpg);
-    background-size: cover;
     background-attachment: fixed;
     cursor: context-menu;
     display: flex;
@@ -187,6 +186,7 @@ a {
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 0 10px 0 10px;
     }
     .matn {
         margin-top: 50px;
@@ -195,6 +195,6 @@ a {
     .sass {
         backdrop-filter: blur(10px);
         width: 500px;
-        height: 450px;
+        height: 500px;
     }
 }
