--- a/about/style.css
+++ b/about/style.css
@@ -17,12 +17,13 @@
 }
 
 .matn1 {
-    margin-top: 100px;
+    margin-top: 70px;
     margin-bottom: -180px;
     text-align: center;
     font-weight: 700;
     font-size: 30px;
     color: #fa4659;
+    text-transform: uppercase;
 }
 
 .sass {
@@ -43,20 +44,22 @@ header {
 
 .asosiy h1 {
     font-size: 50px;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
 }
 
 .asosiy a {
+    text-transform: uppercase;
     width: 180px;
-    height: 45px;
-    padding: 5px 5px 5px 5px;
-    margin-right: 20px;
+    height: 50px;
+    padding: 10px;
+    margin-right: 10px;
     font-size: 25px;
-    border-radius: 20px;
+    border-radius: 100px;
     border: 3px solid #fa4659;
     background: transparent;
     color: #fa4659;
     text-decoration: none;
+    transition: all 0.5s;
 }
 
 .asosiy a:hover {
