--- a/about/Topshiriqlar_Bazasi/school/style.css
+++ b/about/Topshiriqlar_Bazasi/school/style.css
@@ -12,9 +12,13 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: #26335D;
+}
+
+.close,
+.open {
+    display: none !important;
 }
 
 .container {
@@ -28,8 +32,10 @@ body {
     width: 1322px;
     background-color: #26335D;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    padding: 0 20px;
+    margin-left: auto;
 }
 
 .header-t {
@@ -42,10 +48,12 @@ body {
 .header-ul {
     list-style: none;
     display: flex;
+    align-items: center;
+    gap: 21px;
 }
 
 .li {
-    margin-right: 21px;
+    /* margin-right: 21px; */
     font-size: 14px;
     font-weight: 700;
     line-height: 24px;
@@ -90,7 +98,6 @@ a {
 }
 
 .section1 {
-    height: 682px;
     display: flex;
     justify-content: right;
     align-items: center;
@@ -121,7 +128,6 @@ a {
 
 .matn-2 {
     height: 60px;
-    width: 458px;
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
@@ -157,7 +163,6 @@ a {
 }
 
 .section2 {
-    height: 676px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -244,7 +249,6 @@ a {
 }
 
 .section3 {
-    height: 849px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -252,7 +256,8 @@ a {
 
 .text {
     height: 246px;
-    width: 507px;
+    /* width: 507px; */
+    margin-right: 30px;
 }
 
 .pos {
@@ -315,18 +320,17 @@ a {
 }
 
 .section4 {
-    height: 1000px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .section5 {
-    height: 1236px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .mac {
@@ -366,13 +370,13 @@ a {
     display: flex;
     gap: 10px;
     margin-left: 15px;
+    margin-top: 80px;
 }
 
 .boxitem {
     height: 622px;
     width: 348px;
     background: white;
-    margin-top: 80px;
     padding: 25px 25 35px 25px;
 }
 
@@ -510,7 +514,6 @@ a {
 }
 
 .section6 {
-    height: 855px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -690,12 +693,12 @@ a {
 }
 
 .footer {
-    height: 272px;
     background-color: #fff;
     width: 100%;
 }
 
 .footer1 {
+    height: 274px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -725,7 +728,13 @@ a {
     color: #737373;
 }
 
-li {
+.noneMenu {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+li:not(.li) {
     margin-bottom: 10px;
 }
 
@@ -754,8 +763,7 @@ li {
     background: #FAFAFA;
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    padding: 0 320px 0 275px;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -773,29 +781,164 @@ li {
     align-items: center;
 }
 
-@media screen and (max-width:1280px) {
+.icon {
+    display: none;
+}
+
+.comment2 {
+    display: none;
+}
+
+.boxthree {
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+@media screen and (max-width:1024px) {
     .container {
-        width: 1280px;
+        width: 100%;
+    }
+    .header {
+        width: 100%;
+        padding-left: 100px;
     }
     .section1 {
         display: flex;
         justify-content: center;
     }
     .img {
-        height: 500px;
-        width: 500px;
+        height: 400px;
+        margin-left: -30px;
+    }
+    .section1 {
+        padding-top: 50px;
+    }
+    .section2 {
+        padding-top: 50px;
+    }
+    .section3 {
+        padding-top: 50px;
+    }
+    .section4 {
+        padding-top: 50px;
+    }
+    .section5 {
+        width: 100%;
+    }
+    .section6 {
+        padding-top: 50px;
+    }
+    .section7 {
+        padding-top: 50px;
+    }
+    .control {
+        height: 246px;
+        width: 440px;
+        margin-left: -953px;
+    }
+    .ios {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .mac {
+        width: 100%;
+    }
+    .macos {
+        width: 980px;
+    }
+    .cub-box {
+        width: 100%;
+        padding: 20px;
+    }
+    .boxspace {
+        margin-top: 0;
+    }
+    .post2 {
+        margin-left: 280px;
+    }
+    .play {
+        margin-right: 20px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .container {
+        width: 100%;
+    }
+    .ios {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .noneMenu {
+        transition: all .5s;
+        flex-direction: column;
+        height: 100vh;
+        width: 300px;
+        background-color: darkslategray;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        z-index: 9999;
+    }
+    .header-ul {
+        flex-direction: column;
+    }
+    .button {
+        margin-left: 60px;
+    }
+    .close,
+    .open {
+        display: inline !important;
+        padding: 10px;
+        width: 35px;
+    }
+    .close {
+        margin-left: 20px;
     }
     .header {
         width: 100%;
+        display: flex;
+        justify-content: start;
+    }
+    .header-t {
+        margin-right: 450px;
     }
     .section1 {
-        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
     }
-    .section2 {
-        width: 100%;
+    .matn {
+        padding-top: 50px;
+        margin-left: 150px;
+    }
+    .img {
+        height: 600px;
+        margin: auto;
+    }
+    .video {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 50px;
+    }
+    .control {
+        padding-top: 50px;
+        margin-left: 0;
     }
     .section3 {
-        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .boxthree {
+        display: flex;
+        align-items: center;
+        margin-bottom: 50px;
     }
     .section4 {
         width: 100%;
@@ -814,5 +957,144 @@ li {
     }
     .footer {
         width: 100%;
+    }
+    .macos {
+        width: 730px;
+    }
+    .menu {
+        height: 200px;
+        align-items: flex-start;
+    }
+    .cub-box {
+        margin-bottom: 60px;
+    }
+    .inputemail {
+        padding: 16px 500px 17px 20px;
+    }
+    .footer1 {
+        height: 450px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .post2 {
+        margin-left: 150px;
+    }
+}
+
+@media screen and (max-width:425px) {
+    .container {
+        width: 100%;
+    }
+    .header {
+        width: 100%;
+        display: flex;
+        justify-content: start;
+        margin-left: -70px;
+    }
+    .header-t {
+        margin-right: 190px;
+    }
+    .img {
+        height: 300px;
+        margin: auto;
+    }
+    .video {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 50px;
+    }
+    .i {
+        position: absolute;
+        top: 100px;
+        left: 150px;
+    }
+    .section1 {
+        width: 100%;
+    }
+    .matn {
+        width: 100%;
+        margin-bottom: 100px;
+        margin-left: 0px;
+        padding-left: 20px;
+    }
+    .section2 {
+        width: 100%;
+    }
+    .boxthree {
+        display: block;
+        align-items: center;
+        margin-bottom: 50px;
+    }
+    .boxtwo {
+        margin-top: 30px;
+    }
+    .section3 {
+        width: 100%;
+    }
+    .section4 {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 50px;
+        align-items: center;
+    }
+    .control {
+        margin-left: 20px;
+        height: 246px;
+        width: 350px;
+    }
+    .text {
+        height: 246px;
+        width: 200px;
+    }
+    .control-text {
+        font-size: 30px;
+    }
+    .doc {
+        height: 300px;
+        padding-top: 50px;
+        padding-bottom: 25px;
+    }
+    .section5 {
+        width: 100%;
+    }
+    .section6 {
+        width: 100%;
+    }
+    .section7 {
+        display: none;
+    }
+    .footer1 {
+        height: 650px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .footer4 {
+        margin-left: -10px;
+    }
+    .play1 {
+        height: 250px;
+    }
+    .matn-h1 {
+        font-size: 30px;
+    }
+    .pos {
+        width: 300px;
+    }
+    .post1 {
+        width: 400px;
+    }
+    .macos {
+        width: 380px;
+    }
+    .post2 {
+        margin-left: 15px;
+    }
+    .inputemail {
+        padding: 16px 200px 17px 20px;
+    }
+    .footer5 {
+        padding: 20px;
     }
 }
