--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,7 +94,7 @@ a {
 
 img {
     max-width: 100%;
-    height: auto;
+    height: 100%;
     display: block;
 }
 
@@ -322,6 +322,7 @@ img {
     border-radius: .5rem;
     margin: 0 auto;
     margin-bottom: var(--mb-4);
+    height: auto;
 }
 
 .about_information {
